Up [Ov] -  Consumo REST  por Parametros y Body + corto circuito